--- a/index.html
+++ b/index.html
@@ -113,11 +113,12 @@
                 <td>will not be visible on the web page but the space is reserved for</td>
             </tr>
         </table>
-    </main>
 
-    <footer>
-        <p>Made by Kashfi Fahim | Kashfi.Fahim@gmail.com | Last updated on December 28, 2022</p>
-    </footer>
+        <nav>
+            <a href="/">Back</a>
+        </nav>
+        
+    </main>
     
 </body>
 </html>
